FIXED - product icons are missing in java merger multilangual pages.

--- a/config/config-prod-releases-aspose-com.toml
+++ b/config/config-prod-releases-aspose-com.toml
@@ -67,14 +67,14 @@ defaultContentLang = 'en'
       languageCode = "el"
       flag = "flag-gr"
       weight = 8
-      menuCode = "aspose-gr"
+      menuCode = "aspose-el"
     [languages.es]
       contentDir = 'content/es'
       languageName = "Español"
       languageCode = "es"
       flag = "flag-es"
       weight = 9
-      menuCode = "aspose-pt"
+      menuCode = "aspose-es"
     [languages.id]
       contentDir = 'content/id'
       languageName = "Indonesia"
