--- a/.github/workflows/releases-aspose-com-prod.yml
+++ b/.github/workflows/releases-aspose-com-prod.yml
@@ -33,8 +33,8 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: macos-latest
-    timeout-minutes: 120 # 2 hours
+    runs-on: macos-13
+    # timeout-minutes: 120 # 2 hours
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
