--- a/.github/workflows/releases-aspose-com-prod.yml
+++ b/.github/workflows/releases-aspose-com-prod.yml
@@ -33,7 +33,8 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: macos-13
+    ## Updated the runner as per https://github.com/actions/runner-images/issues/13046
+    runs-on: macos-14
     # timeout-minutes: 120 # 2 hours
 
     # Steps represent a sequence of tasks that will be executed as part of the job
