--- a/.github/workflows/releases-aspose-com-prod.yml
+++ b/.github/workflows/releases-aspose-com-prod.yml
@@ -34,7 +34,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     ## Updated the runner as per https://github.com/actions/runner-images/issues/13046
-    runs-on: macos-14
+   # runs-on: macos-14
+    runs-on: ubuntu-latest
     # timeout-minutes: 120 # 2 hours
 
     # Steps represent a sequence of tasks that will be executed as part of the job
