--- a/.github/workflows/releases-aspose-com-prod.yml
+++ b/.github/workflows/releases-aspose-com-prod.yml
@@ -34,10 +34,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     ## Updated the runner as per https://github.com/actions/runner-images/issues/13046
-   # runs-on: macos-14
-    runs-on: ubuntu-latest
+    # runs-on: macos-14
+    runs-on: macos-15-intel  # was: macos-13 or ubuntu-latest
     # timeout-minutes: 120 # 2 hours
-    timeout-minutes: 240 # 4 hours
+    
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
